Metodo para pasar de ejercicio